Fix main menu text truncation

--- a/app/src/main/res/layout/main_bible_view.xml
+++ b/app/src/main/res/layout/main_bible_view.xml
@@ -158,5 +158,6 @@
         android:layout_height="match_parent"
         android:layout_gravity="start"
         android:fitsSystemWindows="true"
+        app:theme="@style/NavigationViewTextStyle"
         app:menu="@menu/main_bible_drawer_menu" />
 </androidx.drawerlayout.widget.DrawerLayout>
