Add config button to speak transport

--- a/app/src/main/res/layout/main_bible_view.xml
+++ b/app/src/main/res/layout/main_bible_view.xml
@@ -148,7 +148,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layout_constraintBottom_toBottomOf="parent"
-            custom:hideStatus="false" />
+            custom:hideStatus="false"
+            custom:showConfig="true"
+            />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
