Started working on fullscreen improvement

--- a/app/src/main/res/layout/main_bible_view.xml
+++ b/app/src/main/res/layout/main_bible_view.xml
@@ -146,8 +146,8 @@
             android:layout_height="0dp"
             android:orientation="vertical"
             app:layout_constrainedHeight="true"
-            app:layout_constraintTop_toBottomOf="@+id/toolbar"
-            app:layout_constraintBottom_toTopOf="@+id/speakTransport"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
             />
 
         <net.bible.android.view.util.widget.SpeakTransportWidget
@@ -155,6 +155,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layout_constraintBottom_toBottomOf="parent"
+            android:background="@color/white"
             custom:hideStatus="false"
             custom:showConfig="true"
             />
