--- a/app/src/main/res/layout/main_bible_view.xml
+++ b/app/src/main/res/layout/main_bible_view.xml
@@ -113,7 +113,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:contentDescription="@string/doc_type_bible"
-                        android:text="nnn"
+                        android:text="nnnn"
                         />
                     <Button
                         android:id="@+id/bibleButton"
