--- a/app/src/main/res/drawable/window_button.xml
+++ b/app/src/main/res/drawable/window_button.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-  ~ Copyright (c) 2018 Martin Denham, Tuomas Airaksinen and the And Bible contributors.
+  ~ Copyright (c) 2019 Martin Denham, Tuomas Airaksinen and the And Bible contributors.
   ~
   ~ This file is part of And Bible (http://github.com/AndBible/and-bible).
   ~
@@ -17,16 +17,18 @@
   ~
   -->
 
-<resources>
-    <declare-styleable name="SpeakTransportWidget">
-        <attr name="hideStatus" format="boolean" />
-        <attr name="showConfig" format="boolean" />
-    </declare-styleable>
-    <declare-styleable name="transportButtonTheme">
-        <attr name="transportButtonColor" format="color"/>
-    </declare-styleable>
-    <declare-styleable name="windowButtonTheme">
-        <attr name="windowButtonStrokeColor" format="color"/>
-        <attr name="windowButtonBackgroundColor" format="color"/>
-    </declare-styleable>
-</resources>
+
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle"
+    >
+    <corners android:radius="6dp" />
+    <stroke android:width="3dp" android:color="?attr/windowButtonStrokeColor" />
+
+    <solid android:color="?attr/windowButtonBackgroundColor"/>
+    <padding android:left="8dp"
+        android:top="4dp"
+        android:right="8dp"
+        android:bottom="4dp" />
+</shape>
+
+
