Make speak transport widget background styleable

--- a/app/src/main/res/layout/speak_transport_widget.xml
+++ b/app/src/main/res/layout/speak_transport_widget.xml
@@ -23,6 +23,7 @@
     android:id="@+id/buttonsLayout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="?attr/speakTransportBackground"
     android:orientation="vertical">
 
         <TextView
