Window buttons now work

--- a/app/src/main/res/values/barstyles.xml
+++ b/app/src/main/res/values/barstyles.xml
@@ -19,6 +19,7 @@
 		<item name="windowButtonStrokeColor">#80FFFFFF</item>
 		<item name="windowButtonBackgroundColor">#886e6e6e</item>
 		<item name="speakTransportBackground">#FFFFFF</item>
+		<item name="transportBarHeight">75dp</item>
 	</style>
 
 	<style name="AppThemeNight" parent="@style/Theme.AppCompat">
