--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -25,6 +25,7 @@
     <declare-styleable name="transportButtonTheme">
         <attr name="transportButtonColor" format="color"/>
         <attr name="speakTransportBackground" format="color" />
+        <attr name="transportBarHeight" format="dimension" />
     </declare-styleable>
     <declare-styleable name="windowButtonTheme">
         <attr name="windowButtonStrokeColor" format="color"/>
