--- a/app/src/main/res/layout/main_bible_view.xml
+++ b/app/src/main/res/layout/main_bible_view.xml
@@ -166,7 +166,7 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start"
-        android:fitsSystemWindows="true"
+        android:fitsSystemWindows="false"
         app:theme="@style/NavigationViewTextStyle"
         app:menu="@menu/main_bible_drawer_menu" />
 </androidx.drawerlayout.widget.DrawerLayout>
