Disable auto-hyphenation for now

--- a/app/src/main/assets/web/style.css
+++ b/app/src/main/assets/web/style.css
@@ -10,8 +10,8 @@ body {
 	padding-left: 2vw;
 	padding-right: 2vw;
 	max-width: 17cm;
-	hyphens: auto;
-	-webkit-hyphens: auto;
+	/*hyphens: auto;
+	-webkit-hyphens: auto; */
 	text-align: justify;
 }
 
