Fix commentary bottom padding

--- a/app/src/main/assets/web/style.css
+++ b/app/src/main/assets/web/style.css
@@ -6,7 +6,7 @@ body {
 	font-size: 1.1em;
 	margin: auto;
 	padding-top: 100px;
-	padding-bottom: 100px;
+	padding-bottom: 100%;
 	padding-left: 2vw;
 	padding-right: 2vw;
 	max-width: 17cm;
