--- a/app/src/main/res/values/barstyles.xml
+++ b/app/src/main/res/values/barstyles.xml
@@ -20,6 +20,8 @@
 		<item name="windowButtonBackgroundColor">#886e6e6e</item>
 		<item name="speakTransportBackground">#FFFFFF</item>
 		<item name="transportBarHeight">75dp</item>
+		<!--item name="android:navigationBarColor">#34646464</item-->
+
 	</style>
 
 	<style name="AppThemeNight" parent="@style/Theme.AppCompat">
