--- a/app/src/main/res/layout/speak_transport_widget.xml
+++ b/app/src/main/res/layout/speak_transport_widget.xml
@@ -22,7 +22,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/buttonsLayout"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:background="?attr/speakTransportBackground"
     android:orientation="vertical">
 
