Remove "justify" style for now (fixes #222)

--- a/app/src/main/assets/web/style.css
+++ b/app/src/main/assets/web/style.css
@@ -11,7 +11,7 @@ body {
 	max-width: 17cm;
 	/*hyphens: auto;
 	-webkit-hyphens: auto; */
-	text-align: justify;
+	/*text-align: justify;*/
 }
 
 h1, .heading1 {
