--- a/app/src/main/res/values/untranslated_strings.xml
+++ b/app/src/main/res/values/untranslated_strings.xml
@@ -45,6 +45,7 @@ Look here for language names and codes: http://en.fr.open-tran.eu/
 	<string name="lang_russian">ru: Русский</string>
 	<string name="lang_slovak">sk: Slovenčina</string>
 	<string name="lang_slovenian">sl: Slovenščina</string>
+	<string name="lang_swahili">sw: Swahili</string>
 	<string name="lang_swedish">sv: Svenska</string>
 	<string name="lang_telugu">te: తెలుగు</string>
 	<string name="lang_thai">th: ไทย</string>
