Fix Chinese (Taiwan) language

--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -142,7 +142,7 @@
 		<item>uz</item>
 		<item>vi</item>
 		<item>zh</item>
-		<item>zh-rTW</item>
+		<item>zh-Hant-TW</item>
 	</string-array>
 
 </resources>
