--- a/app/src/main/res/layout/speak_bible.xml
+++ b/app/src/main/res/layout/speak_bible.xml
@@ -8,7 +8,7 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/buttonsLayout"
+        android:layout_above="@+id/transportWidget"
         android:layout_alignParentTop="true"
         android:layout_marginBottom="0dp">
 
@@ -181,6 +181,7 @@
         </LinearLayout>
     </ScrollView>
     <net.bible.android.view.util.widget.SpeakTransportWidget
+        android:id="@+id/transportWidget"
         android:layout_alignParentBottom="true"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
