Implement split mode changing from options menu

--- a/app/src/main/res/menu/main_bible_options_menu.xml
+++ b/app/src/main/res/menu/main_bible_options_menu.xml
@@ -7,7 +7,7 @@
 	>
 	<item
 		android:id="@+id/bibleViewBehaviorSubMenu"
-		android:title="@string/bible_view_behavior"
+		android:title="@string/settings"
 		>
 		<menu>
 			<item android:id="@+id/autoFullscreen"
