--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -25,6 +25,14 @@
 		<item>true</item>
 		<item>automatic</item>
 	</string-array>
+	<string-array name="prefs_night_mode_descriptions_noauto">
+		<item>@string/no</item>
+		<item>@string/yes</item>
+	</string-array>
+	<string-array name="prefs_night_mode_values_noauto">
+		<item>false</item>
+		<item>true</item>
+	</string-array>
 
 	<!-- Split mode: vertical, horizontal, automatic -->
 	<string-array name="prefs_split_mode_descriptions">
