--- a/app/src/main/assets/web/style.css
+++ b/app/src/main/assets/web/style.css
@@ -5,7 +5,7 @@ body {
 	line-height: 1.6em; /* repeat this in .verse ; also hard-coded in BibleView*/
 	font-size: 1.1em;
 	margin: auto;
-	padding-bottom: 100%;
+	padding-bottom: 100vh;
 	padding-left: 2vw;
 	padding-right: 2vw;
 	max-width: 17cm;
